package com.maximilian.familyfinance.enums.family;

public enum TransactionType {
    INCOME,
    EXPENSE
}
